3/1/24 del stopwatch method implemented (cascading shift deletion not tested)

--- a/PMT/PMT/Styles/EMS/timeTracker.scss
+++ b/PMT/PMT/Styles/EMS/timeTracker.scss
@@ -114,6 +114,7 @@
   background-color: $cTableRow;
   transition: width 0.25s;
   h3 {
+    width: 90%;
     margin: 2vh 0vw;
   }
 }
@@ -142,6 +143,7 @@
   background-color: $cTableRow;
   transition: width 0.25s;
   h3 {
+    width: 90%;
     margin: 1vh 0vw;
   }
   .date-wrap {
